# fedrss

./: .gitignore  README.md  pyproject.toml
debt_data_json/: debt_data.json
dod_awards_json/: Contracts_For_July_17_2025.json  Contracts_For_July_18_2025.json  Contracts_For_July_21_2025.json  Contracts_For_July_22_2025.json  Contracts_For_July_23_2025.json  Contracts_For_July_24_2025.json  Contracts_For_July_25_2025.json  Contracts_For_July_28_2025.json  Contracts_For_July_29_2025.json  Contracts_For_July_30_2025.json  Contracts_For_July_31_2025.json  dod_awards_master.json  processed_files.txt
fed_speeches_json/: chair_jerome_h._powell.json  governor_adriana_d._kugler.json  governor_christopher_j._waller.json  governor_lisa_d._cook.json  governor_michael_s._barr.json  vice_chair_for_supervision_michelle_w._bowman.json
src/: clients.py  debt.py  dod.py  feeds.py  main.py  tools.py  treasury.py
